--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.2",
     "resend": "^6.0.3",
+    "sitemap": "^8.0.0",
     "stripe": "^18.5.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
